# AoSC_HW

HW1/: Пояснительная записка.txt
HW1/hw_исходники/: CMakeCache.txt  Makefile  cmake_install.cmake
HW1/hw_исходники/HomeWorkABC/: CMakeLists.txt  container.cpp  container.h  functional.cpp  functional.h  main.cpp  object_oriented.cpp  object_oriented.h  procedural.cpp  procedural.h  rnd.cpp  rnd.h  shape.cpp  shape.h
HW1/results/: ouput0.txt  output1.txt  output2.txt  output3.txt  output4.txt
HW1/tests/: test0.txt  test1.txt  test2.txt  test3.txt  test4.txt
